# showcase.mario

./: CMakeLists.txt  README.md
resources/config/: assets.txt
resources/levels/: level1.txt
src/: main.cpp
src/Action/: Action.cpp  Action.h
src/Animation/: Animation.cpp  Animation.h
src/Assets/: Assets.cpp  Assets.h
src/Components/: Components.h
src/Entities/Entity/: Entity.cpp  Entity.h
src/Entities/EntityManager/: EntityManager.cpp  EntityManager.h
src/GameEngine/: GameEngine.cpp  GameEngine.h
src/Physics/: Physics.cpp  Physics.h
src/Scenes/SMenu/: SMenu.cpp  SMenu.h
src/Scenes/SPlay/: SPlay.cpp  SPlay.h
src/Scenes/Scene/: Scene.cpp  Scene.h
src/Vec2/: Vec2.cpp  Vec2.h
